syntax = "proto3";
package weathertweet;


option go_package = "./proto";

// Mensaje que se enviar√°
message WeatherTweetRequest {
  Municipalities municipality = 1;
  int32 temperature = 2;
  int32 humidity = 3;
  Weathers weather = 4;
}

// Lista de municipios aceptados
enum Municipalities {
  unknown_municipalities = 0;
  mixco = 1;
  guatemala = 2;
  amatitlan = 3;
  chinautla = 4;
}

// Lista de climas aceptados
enum Weathers {
  unknown_weather = 0;
  sunny = 1;
  cloudy = 2;
  rainy = 3;
  foggy = 4;
}

// Respuesta del servidor
message WeatherTweetResponse {
  string status = 1;
}

// Servicio gRPC
service WeatherTweetService {
  rpc SendTweet (WeatherTweetRequest) returns (WeatherTweetResponse);
}